# name: TestComputeLogs.test_compute_logs_subscription_graphql[0]
  list([
    dict({
      'computeLogs': dict({
        'data': '''
          HELLO WORLD
  
        ''',
      }),
    }),
  ])
# ---
# name: TestComputeLogs.test_get_compute_logs_over_graphql[0]
  dict({
    'stdout': dict({
      'data': '''
        HELLO WORLD
  
      ''',
    }),
  })
# ---
